Add NProgress.js, increase organisation with Router from React.js

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -19,6 +19,7 @@
 	</div>
 	<!-- Scripts -->
 	<script type="application/javascript" src="<%= mainJS %>"></script>
+	<script type="application/javascript" src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
 	<script type="application/javascript">
 		window.CONF = {env: "<%= env %>"}
 		document.documentElement.classList.remove("no-js");
