--- a/public/styles/scss/main-css.scss
+++ b/public/styles/scss/main-css.scss
@@ -46,10 +46,10 @@
 @import "modules/_fa";
 @import "modules/_flash";
 @import "modules/_hero";
-@import "modules/_page";
 @import "modules/_loader";
 @import "modules/_noscript";
-@import "modules/_progress-page-bar";
+@import "modules/_nprogress";
+@import "modules/_page";
 @import "modules/_pub-display";
 @import "modules/_rating-icons";
 @import "modules/_slider";
