--- a/public/styles/scss/layouts/_topbar.scss
+++ b/public/styles/scss/layouts/_topbar.scss
@@ -86,6 +86,16 @@
 		@extend %topbar_bars;
 		height: 98px;
 
+		&-heading {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 5px;
+
+			background: $green_col;
+		}
+
 		&-wrapper {
 			width: 100%;
 			
@@ -93,18 +103,6 @@
 
 			&.is-sticky {
 				background-color: rgba(0,0,0,.8);
-
-				&::before {
-					position: absolute;
-					top: 0;
-					left: 0;
-					content: '';
-					display: block;
-					width: 100%;
-					height: 5px;
-
-					background: $green_col;
-				}
 			}
 		}
 
