--- a/public/styles/scss/modules/_rating-icons.scss
+++ b/public/styles/scss/modules/_rating-icons.scss
@@ -46,11 +46,11 @@ span.rating-icons {
 
 			background-position: 0 0;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
@@ -60,11 +60,11 @@ span.rating-icons {
 
 			background-position: -20px 0;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
@@ -74,11 +74,11 @@ span.rating-icons {
 
 			background-position: -40px 0;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
@@ -89,11 +89,11 @@ span.rating-icons {
 
 			background-position: 0px -20px;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
@@ -104,11 +104,11 @@ span.rating-icons {
 
 			background-position: -20px -20px;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
@@ -119,11 +119,11 @@ span.rating-icons {
 
 			background-position: -40px -20px;
 
-			&.is-chrome {
+			&.is-webp {
 				background-image: url('/assets/images/rating-icons-sprite.webp');
 			}
 
-			&.no-chrome {
+			&.no-webp {
 				background-image: url('/assets/images/rating-icons-sprite.jpg');
 			}
 		}
