[Add] Feedback section, dependency [react-router-hash-link], cumulativeOfffset funct.

--- a/public/styles/main-css.css
+++ b/public/styles/main-css.css
@@ -1041,6 +1041,13 @@ p, .paragraph {
   font-size: 9rem; }
 
 /*  ==================
+    Feedback
+    ================== */
+.feedback {
+  padding: 100px 0 !important;
+  margin: auto; }
+
+/*  ==================
     Flash
     ================== */
 .flash {
