--- a/public/styles/scss/main-css.scss
+++ b/public/styles/scss/main-css.scss
@@ -44,6 +44,7 @@
 @import "modules/_cookie";
 @import "modules/_custom-select";
 @import "modules/_fa";
+@import "modules/_feedback";
 @import "modules/_flash";
 @import "modules/_hero";
 @import "modules/_loader";
