--- a/public/styles/scss/tools/_settings.scss
+++ b/public/styles/scss/tools/_settings.scss
@@ -13,6 +13,7 @@ $dark_col_focus: #080808;
 $gold_col: #A17836;
 $green_col: #27ae60;
 $blue_col: #2980b9;
+$red_col: #c0392b;
 
 // Variables of time
 $vsm_tr: 0.15s;
