--- a/public/styles/scss/tools/_settings.scss
+++ b/public/styles/scss/tools/_settings.scss
@@ -4,14 +4,14 @@
 
 // Variables of colors
 $primary_col: #050608;
-$secondary_col: #F9CA24;
-$secondary_col_hover: #EABC23;
-$secondary_col_focus: #D8AE15;
 $dark_col: #111111;
 $dark_col_hover: #0D0D0D;
 $dark_col_focus: #080808;
+$gray_col: #121212;
 $gold_col: #A17836;
 $green_col: #27ae60;
+$green_col_hover: #26a75d;
+$green_col_focus: #219552;
 $blue_col: #2980b9;
 $red_col: #c0392b;
 
