--- a/public/styles/scss/base/_fonts.scss
+++ b/public/styles/scss/base/_fonts.scss
@@ -39,8 +39,9 @@ p, .paragraph { text-indent: 20px; }
 
 .triangular-bar {
     position: absolute;
-
+    
     overflow: visible;
+    fill: #000;
 
     @for $i from 1 through 5 {
         > polygon:nth-child(#{$i}) {
