--- a/public/styles/scss/modules/_page.scss
+++ b/public/styles/scss/modules/_page.scss
@@ -57,6 +57,15 @@
     }
 }
 
+.inline-vh {
+    @include flexbox((
+        display: flex,
+        flex-direction: column,
+        justify-content: center
+    ));
+    align-items: center;
+}
+
 .page-part-border {
     position: absolute;
     bottom: 0;
